--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: aerosol-covid-19
 description: "Timeline supporting the aerosol nature of COVID-19 infection"
 year: 2020
-author: various 
+author: various contributors
 # add search box to navbar, true/false
 search: false
 
