match title to sub domain

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: aerosol-covid-19
+title: aerosolized-covid-19
 description: "Timeline supporting the aerosol nature of COVID-19 infection"
 year: 2020
 author: various contributors
