--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: aerosolized-covid-19
-description: "Timeline supporting the aerosol nature of COVID-19 infection"
+title: It's Airborne!
+description: "Timeline supporting the aerosol nature of COVID-19 transmission"
 year: 2020
 author: various contributors
 # add search box to navbar, true/false
